<resources>
    <string name="app_name">BuildingCardFinalVersion</string>



    <string name="action_settings">Settings</string>


    <string name="abbey_text">Abbey Building</string>
    <string name="bishops_text">Bishops Building</string>
    <string name="cathedral_text">Cathedral Building</string>
    <string name="deans_text">Deans Building</string>
    <string name="gibney_text">Gibney Building</string>
    <string name="knights_text">Knights Building</string>
    <string name="monks_text">Monks Building</string>
    <string name="sessions_text">Sessions House</string>
    <string name="temple_text">Temple Building</string>
    <string name="title_activity_abbey_window">AbbeyWindow</string>


    <string name="abbey_room_info">Building Floor Room \n
                    A        1      01   -     A         1     14  \n
                    A        2      01   -     A         2     14  \n
                    A        3      01   -     A         3     14  \n
                    A        4      01   -     A         4     14 \n
        \n
        \n
        Eating Area
        \n
        Yes, Blackfriars Restaurant.
        \n
        \n
        Study Area
        \n
        N/A
    </string>
    <string name="title_activity_bishops_window">BishopsWindow</string>

       <string name="bishops_info">Houses:

          \n
Electrical, Mechanical, Manufacturing, Engineering and Computing.

\n
           \n
Building Floor Room -
\n
B	   0      02     -    B        0      13
\n
B           1      00    -    B        1       42
\n
           \n

Lecturers:

           \n
Stephen Smith, John Rogers, Nick McDavid, Murray Martin, Barry Smith
Daniel Rogers, Jeremy Spencer and Obinna Ajuruchi.
\n
Martin Cordwell, Kev Gibbon, Kevin Hare, Edward Hodge, David Jennings, Brian Lawson, Richard Long, Stephen Lowe, David Gregory Andrew Bellas and David Thompson
\n
           \n
Eating Area:
\n
Yes, Bishops Cafe.
\n
           \n
Study Area:
           \n
N/A</string>
    <string name="title_activity_cathedral_window">CathedralWindow</string>

    <string name="cathedral_info">Houses: A Levels, International, Access to University, Business Skills, Travel and Tourism and the IT Help Desk.

\n

\n
Building Floor Room
\n
    C       0       01   -      C       0      51
\n
    C       1       03   -      C       1      07
\n
    C       1       08   -      C       1      20
\n
    C       2       01   -      C       2      04
\n
    C       3       01   -      C       3      03
\n
\n
Lecturers
\n
Allan Johnson, Jane Woods, Terry Organ, Christine Cooke, Michael Cowling, Adam Jones, Wendy Kempster, Matthew Noakes, Maxine Osborne, Richard Thomas, Rick Courtney, Robin Sission, Dominic Docherty, Peter Goddard, Jennie Mccann, Rachel Tottingham, Lynn Train-Brown, Bob Bradford, Ma Brown, Emma, Innesbeer, John Tomlinson.
\n
        \n
Eating Area
\n
N/A
\n
        \n
Study Area
\n
N/A
</string>
    <string name="title_activity_deans_window">DeansWindow</string>

    <string name="deans_info">Houses:
\n
        Sports Studies, Gym and Restaurant.

\n

\n
Lecturers
\n
Paul Campbell, Rebecca Hamnett, David Horsfeild, Steven Horsfeild, Michelle McGill, Stuart Reddington and Alex Sheldon.
\n
        \n
Eating Area
\n
Yes, Deans Sports and Leisure Restaurant.
\n
        \n
Study Area
\n
N/A
</string>

    <string name="title_activity_gibney_window">GibneyWindow</string>

<string name="gibney_info">Houses:
    \n
    Hair and Beauty.

\n

\n

Building Floor Room
\n
    G        0     01    -      G       0      03
\n
    G        0     04    -      G       0      13
\n
    G        1     01    -      G       1      19
\n
    \n
    \n
Lecturers
\n
Marie Osbourne, Lesley Elliott
\n
    \n
Eating Area
\n
N/A
\n
    \n
Study Area
\n
N/A
</string>
    <string name="title_activity_knights_window">KnightsWindow</string>

    <string name="knights_info">Houses:
\n
Performing Arts, Electrical and Gas Testing, Plastering.
\n
        \n

Building Floor Room
\n
    K                01   -     K                43
\n
        \n
        \n
Lecturers
\n
John Cotton, Andrew Skeet.
Lisa Cowley, Jane Hewitt, Stefanie Bennett, David Mallett, Jennifer Matthews, Howell Thomas
\n
        \n
Eating Area:
\n
N/A
\n
        \n
Study Area:
        \n
N/A
</string>

    <string name="title_activity_monks_window">MonksWindow</string>

    <string name="monks_info">

        Houses:
        \n
        Main Reception, The Library, Common Room, Admissions, Information Services and Exams
\n
        \n
Eating Area

        \n
N/A
\n
        \n
Study Area
        \n
        \n
Library.
        \n
        \n
        The library has many facilities including; PC’s, Laptops, and Quiet Study Areas. These can be booked in advance via the Library or from home.
\n
        \n
Common Room.
        \n
        \n
        Students may book a laptop if needed and note it in the log book. (Please note that Laptops may not be taken from the common room.)
\n
        \n
Additional Information
\n
Library Opening Times
Term Time
 \n
Monday                           	8.15am – 7pm
Tuesday                           	8.15am – 8pm
Wednesday                    	8.15am – 8pm
Thursday                         	8.15am – 8pm
Friday                                	8.15am – 4.15pm
Saturday                          	9am – 3pm
Sunday                             	Closed
 \n
Vacation
Monday –Friday           	9am – 4.15pm


    </string>

    <string name="title_activity_sessions_window">SessionsWindow</string>

    <string name="sessions_info">
        Houses:
        \n
        Catering
\n
        \n



Building Floor Room
\n
        \n

Lecturers
\n
        \n
Eating Area
\n
Yes, Sessions Restaurant.
\n
        \n
Study Area
\n
N/A

    </string>




    <string name="title_activity_temple_window">TempleWindow</string>

    <string name="temple_info">Houses:
        \n
        Brickwork, Carpentry, Joinery, Painting and decorating, Plumbing and Gas and Technical Studies.
\n
        \n
Lecturers
\n
Terry Coatsworth, Russ Tinker, Paul Barnes, Dale Brader, Michael Dews, Robert Laskey, Graham Stanney, Steve Turner, Ashley ard, Simon Quincey, Richard Preece, Paul Gregory, Steve Turner, Paul Wilcockson, Robert Jones, Peter Watson, Rob Griffiths, Ian West.
\n
        \n
Eating Area
\n
N/A
\n
        \n
Study Area
\n
N/A
</string>

</resources>

