<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuildingMainActivity"
    >

    //A card view is applied to the linear layout. It's given an id, to call later in the project.
    //The height is set to 150dp and the width to match parent, this will fill the parent in
    //size. It is also declared that the card has a clickable function.


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        //The card is given an image view within. This holds a photo of the actual building.


        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"
            android:id = "@+id/abbey_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:clickable="true">

            //A text view is created to hold the title of the building.




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abbey_text"
                android:id = "@+id/abbeyTextView"
                android:layout_gravity = "right"
                android:layout_marginRight = "20dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:textColor="#ff020202"></TextView>

            // A text view holds the title of the building.

            ></android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"

            android:id = "@+id/bishops_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:layout_below = "@id/abbey_card_view"
            android:clickable="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity = "right"
                android:layout_marginRight = "20dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:text="@string/bishops_text"
                android:id = "@+id/bishopsTextView"
                android:textColor="#ff020202"
                ></TextView>

            ></android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"

            android:id = "@+id/cathedral_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:layout_below = "@id/bishops_card_view"
            android:clickable="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cathedral_text"
                android:id = "@+id/cathedralTextView"
                android:layout_gravity = "right"
                android:layout_marginLeft = "5dp"
                android:layout_marginRight = "5dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:textColor="#ff020202"
                ></TextView>

            ></android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"

            android:id = "@+id/deans_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:layout_below = "@id/cathedral_card_view"
            android:clickable="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deans_text"
                android:id = "@+id/deansTextView"
                android:layout_gravity = "right"
                android:layout_marginRight = "15dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:textColor="#ff020202"
                ></TextView>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"

            android:id = "@+id/gibney_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:layout_below = "@id/deans_card_view"
            android:clickable="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gibney_text"
                android:id = "@+id/gibneyTextView"
                android:layout_gravity = "right"
                android:layout_marginRight = "20dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:textColor="#ff020202"
                ></TextView>

            ></android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"

            android:id = "@+id/knights_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:layout_below = "@id/gibney_card_view"
            android:clickable="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knights_text"
                android:id = "@+id/knightsTextView"
                android:layout_gravity = "right"
                android:layout_marginRight = "20dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:textColor="#ff020202"
                ></TextView>

            ></android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"

            android:id = "@+id/monks_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:layout_below = "@id/knights_card_view"
            android:clickable="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monks_text"
                android:id = "@+id/monksTextView"
                android:layout_gravity = "right"
                android:layout_marginRight = "20dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:textColor="#ff020202"
                ></TextView>

            ></android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"

            android:id = "@+id/sessions_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:layout_below = "@id/monks_card_view"
            android:clickable="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sessions_text"
                android:id = "@+id/sessionsTextView"
                android:layout_gravity = "right"
                android:layout_marginRight = "20dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:textColor="#ff020202"
                ></TextView>

            ></android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
            xmlns:tools = "http://schemas.android.com/tools"

            android:id = "@+id/temple_card_view"
            android:layout_height = "150dp"
            android:layout_width = "match_parent"
            android:layout_below = "@id/sessions_card_view"
            android:clickable="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temple_text"
                android:id = "@+id/templeTextView"
                android:layout_gravity = "right"
                android:layout_marginRight = "20dp"
                android:layout_marginTop = "75dp"
                android:textSize="28dp"
                android:textColor="#ff020202"
                ></TextView>



            ></android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
